Modify output paths for use in FASTA data processing workflow

--- a/NWCSAF2ADAGUC/RDT/rdt.conf
+++ b/NWCSAF2ADAGUC/RDT/rdt.conf
@@ -19,9 +19,9 @@
 # named with the hard_out_name
 #########################################################################################
 
-& PATH & inDir = ./data
-& PATH & outDir = /data/adaguc-autowms
-& PATH & tempDir = /home/adaguc/NWCSAF2ADAGUC/RDT/temp
+& PATH & inDir = /data/fasta/geojson/RDT/data
+& PATH & outDir = /data/fasta/geojson/RDT
+& PATH & tempDir = /data/fasta/tmp
 & PATH & debugInDir = ./debug_data
 & PATH & debugOutDir = ./debug_geoJSON
 #& PATH & hard_out_name = rdt.geojson
